--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,12 +10,14 @@
     "noFallthroughCasesInSwitch": true,
     "noUnusedLocals": false,
     "experimentalDecorators": true,
-    "baseUrl": "."
+    "baseUrl": ".",
+    "types": []
   },
   "include": [
     "src/**/*"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "**/*.test.ts"
   ]
 }
