move type definition files to "es" directory

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "description": "A time input helper",
   "main": "./cjs/index.js",
-  "types": "./types/index.d.ts",
+  "types": "./es/index.d.ts",
   "module": "./es/index.js",
   "jsnext:main": "./es/index.js",
   "jsdelivr": "./umd/lenientime.min.js",
@@ -13,11 +13,11 @@
     "build": "npm run lint && npm run build:umd && npm run build:cjs && npm run build:es && npm run build:docs && npm test",
     "build:umd": "rollup -c && uglifyjs -m -o umd/lenientime.min.js umd/lenientime.js && cpx umd/**/* docs/umd/",
     "build:cjs": "tsc -p .",
-    "build:es": "tsc -p . -m es2015 --outDir ./es -d --declarationDir ./types",
+    "build:es": "tsc -p . -m es2015 --outDir ./es -d",
     "build:docs": "typedoc src/index.ts src/core/index.ts src/core/lenientime.ts src/core/lenientime-like.ts",
     "watch": "echo \"Rollup watch crashes in cmd/PowerShell on windows. see https://github.com/rollup/rollup/issues/1739\" && exit 1",
     "watch_": "rollup -c -w",
-    "clean": "rimraf umd cjs es types docs/api docs/umd",
+    "clean": "rimraf umd cjs es docs/api docs/umd",
     "lint": "tslint -p .",
     "test": "jest"
   },
