--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
     "build": "npm run clean && npm run lint && npm run build:umd && npm run build:cjs && npm run build:es && npm run build:docs && npm test",
     "build:umd": "rollup -c && uglifyjs -m -o umd/lenientime.min.js umd/lenientime.js && cpx umd/**/* docs/umd/",
     "build:cjs": "tsc -p .",
-    "build:es": "tsc -p . -m es2015 --outDir ./es -d",
+    "build:es": "tsc -p . -m es2015 --outDir ./es",
     "build:docs": "typedoc src/index.ts src/core/index.ts src/core/lenientime.ts src/core/lenientime-like.ts",
-    "watch": "echo \"Rollup watch crashes in cmd/PowerShell on windows. see https://github.com/rollup/rollup/issues/1739\" && exit 1",
-    "watch_": "rollup -c -w",
+    "watch": "rollup -c -w",
     "clean": "rimraf umd cjs es docs/api docs/umd",
     "lint": "tslint -p .",
     "test": "jest"
@@ -24,17 +23,17 @@
   "author": "",
   "license": "WTFPL",
   "devDependencies": {
-    "@types/jest": "^22.1.3",
+    "@types/jest": "^22.2.3",
     "cpx": "^1.5.0",
-    "jest": "^22.4.2",
+    "jest": "^23.1.0",
     "rimraf": "^2.6.2",
-    "rollup": "^0.56.3",
-    "ts-jest": "^22.4.0",
-    "tslint": "^5.9.1",
-    "typedoc": "^0.10.0",
-    "typescript": "^2.7.2",
-    "uglify-js": "^3.3.12",
-    "umd": "^3.0.1"
+    "rollup": "^0.59.4",
+    "ts-jest": "^22.4.6",
+    "tslint": "^5.10.0",
+    "typedoc": "^0.11.1",
+    "typescript": "^2.8.4",
+    "uglify-js": "^3.3.28",
+    "umd": "^3.0.3"
   },
   "jest": {
     "collectCoverage": true,
